force-app/main/default/objects/SYS_IntegrationLog__c/SYS_IntegrationLog__c.object-meta.xml
<CustomObject>
    <label>SYS_IntegrationLog</label>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>SYS_IntegrationLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYS_IntegrationLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>