force-app/main/default/objects/SYS_IntegrationLog__c/fields/Additional_Param__c.field-meta.xml
<CustomField>
    <fullName>Additional_Param__c</fullName>
    <description>This field is used to keep the additional parameter passed in an Invocable apex.</description>
    <label>Additional Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>