force-app/main/default/objects/SYS_IntegrationLog__c/fields/Callout_URL__c.field-meta.xml
<CustomField>
    <fullName>Callout_URL__c</fullName>
    <label>Callout URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>