force-app/main/default/objects/SYS_IntegrationLog__c/fields/Custom_Apex_Handler__c.field-meta.xml
<CustomField>
    <fullName>Custom_Apex_Handler__c</fullName>
    <label>Custom Apex Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>