force-app/main/default/objects/SYS_IntegrationLog__c/fields/data0__c.field-meta.xml
<CustomField>
    <fullName>data0__c</fullName>
    <label>data0</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>