force-app/main/default/objects/SYS_IntegrationLog__c/fields/Flat_Key_for_Resource__c.field-meta.xml
<CustomField>
    <fullName>Flat_Key_for_Resource__c</fullName>
    <description>Defines the flat key in incoming JSON that will be used to identify the Resource and hence the object setting</description>
    <label>Flat Key for Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>