force-app/main/default/objects/SYS_IntegrationLog__c/fields/Force_Sync__c.field-meta.xml
<CustomField>
    <fullName>Force_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Sync</label>
    <type>Checkbox</type>
</CustomField>