force-app/main/default/objects/SYS_IntegrationLog__c/fields/Has_Child__c.field-meta.xml
<CustomField>
    <fullName>Has_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if the JSON length is more than 1M.</description>
    <label>Has Child</label>
    <type>Checkbox</type>
</CustomField>