force-app/main/default/objects/SYS_IntegrationLog__c/fields/Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Integration_Setting__c</fullName>
    <label>Integration Setting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>