force-app/main/default/objects/SYS_IntegrationLog__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>