force-app/main/default/objects/SYS_IntegrationLog__c/fields/Is_Notification_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Notification_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Notification Only</label>
    <type>Checkbox</type>
</CustomField>