force-app/main/default/objects/SYS_IntegrationLog__c/fields/On_Complete_Handler__c.field-meta.xml
<CustomField>
    <fullName>On_Complete_Handler__c</fullName>
    <defaultValue>&quot;SYS_ApplicationService&quot;</defaultValue>
    <label>On Complete Handler</label>
    <length>50</length>
    <type>Text</type>
</CustomField>