force-app/main/default/objects/SYS_IntegrationLog__c/fields/Parent_UUID__c.field-meta.xml
<CustomField>
    <fullName>Parent_UUID__c</fullName>
    <label>Parent UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>