force-app/main/default/objects/SYS_IntegrationLog__c/fields/Parent_WhatId__c.field-meta.xml
<CustomField>
    <fullName>Parent_WhatId__c</fullName>
    <formula>Parent__r.WhatId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent WhatId</label>
    <type>Text</type>
</CustomField>