force-app/main/default/objects/SYS_IntegrationLog__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>