force-app/main/default/objects/SYS_IntegrationLog__c/fields/Root_Log__c.field-meta.xml
<CustomField>
    <fullName>Root_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Log</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>SYS_IntegrationLogs (Root Log)</relationshipLabel>
    <relationshipName>SYS_IntegrationLogsRoot</relationshipName>
    <type>Lookup</type>
</CustomField>