force-app/main/default/objects/SYS_IntegrationLog__c/fields/Sobject_Link__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Link__c</fullName>
    <formula>IF( 
 (ISBLANK(WhatId__c)) , 
&apos;&apos;,
HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; WhatId__c, &apos;Link&apos; ,&apos;_blank&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>