force-app/main/default/objects/SYS_IntegrationLog__c/fields/SYS_Http_Status__c.field-meta.xml
<CustomField>
    <fullName>SYS_Http_Status__c</fullName>
    <label>Http Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>