force-app/main/default/objects/SYS_IntegrationLog__c/fields/SYS_IntegrationSettings__c.field-meta.xml
<CustomField>
    <fullName>SYS_IntegrationSettings__c</fullName>
    <label>SYS_IntegrationSettings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>JIRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>