force-app/main/default/objects/SYS_IntegrationLog__c/fields/SYS_Matrix__c.field-meta.xml
<CustomField>
    <fullName>SYS_Matrix__c</fullName>
    <label>SYS_Matrix</label>
    <referenceTo>SYS_Matrix__c</referenceTo>
    <relationshipLabel>SYS_IntegrationLogs</relationshipLabel>
    <relationshipName>SYS_IntegrationLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>