force-app/main/default/objects/SYS_IntegrationLog__c/fields/SYS_RequestId__c.field-meta.xml
<CustomField>
    <fullName>SYS_RequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequestId</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>Callout Response Logs</relationshipLabel>
    <relationshipName>RequestId</relationshipName>
    <type>Lookup</type>
</CustomField>