force-app/main/default/objects/SYS_IntegrationLog__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>This field is used when the JSON has more than 1M characters and needs to spread over multiple records.</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>