force-app/main/default/objects/SYS_IntegrationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Force_Sync__c</columns>
    <columns>Parent__c</columns>
    <columns>SYS_Operation_Type__c</columns>
    <columns>Type__c</columns>
    <columns>SYS_RequestId__c</columns>
    <columns>Status__c</columns>
    <columns>WhatId__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>retry__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>