force-app/main/default/objects/SYS_IntegrationLog__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HTTP_Method__c</columns>
    <columns>SYS_Http_Status__c</columns>
    <columns>Parent__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>SYS_Operation_Type__c</columns>
    <columns>retry__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>WhatId__c</columns>
    <columns>data0__c</columns>
    <columns>Request_Digest__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>