force-app/main/default/objects/SYS_IntegrationLog__c/listViews/All_SYS_Logs.listView-meta.xml
<ListView>
    <fullName>All_SYS_Logs</fullName>
    <columns>NAME</columns>
    <columns>Force_Sync__c</columns>
    <columns>Parent__c</columns>
    <columns>SYS_Operation_Type__c</columns>
    <columns>Type__c</columns>
    <columns>SYS_RequestId__c</columns>
    <columns>Status__c</columns>
    <columns>WhatId__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>retry__c</columns>
    <columns>HTTP_Method__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ObjectSettingId__c</columns>
    <columns>Integration_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SYS Logs</label>
</ListView>