force-app/main/default/objects/SYS_IntegrationLog__c/listViews/Error_Logs.listView-meta.xml
<ListView>
    <fullName>Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>Sobject_Link__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SYS_Http_Status__c</columns>
    <columns>SYS_RequestId__c</columns>
    <columns>SYS_IntegrationSettings__c</columns>
    <columns>SYS_Operation_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>NEW,DONE</value>
    </filters>
    <label>Error Logs</label>
</ListView>